# unix_sighandler

./: .gitignore  Cargo.toml  README.md
examples/: simple_handler.rs
src/: lib.rs
